[project]
name = "LSP-pyright"
version = "0.0.0"
description = "Python support for Sublime's LSP plugin provided through pyright."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Jinja2==3.*",
  "jmespath>=1,<2",
  "typing-extensions>=4.12",
]

[dependency-groups]
dev = [
  "mypy>=1.14",
  "ruff>=0.13",
  "types-jmespath",
]

[tool.uv]
default-groups = ["dev"]

[tool.basedpyright]
pythonVersion = '3.8'

[tool.pyright]
pythonVersion = '3.8'

[tool.ruff]
preview = true
line-length = 120
target-version = 'py38'
exclude = [
  "*/libs/*",
  ".git",
  ".mypy_cache",
  ".venv",
  ".venv-*",
  "branch-*",
  "overwrites/node_modules/pyright/dist/typeshed-fallback",
  "stubs",
  "syntaxes",
  "tests/files",
  "typings",
  "vendor",
  "venv",
  "venv-*",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "FURB", "SIM"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"boot.py" = ["E402"]
